--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 CVS/
+doc/source/*.tex
+
 *.pdf
+*.dvi
 *.eps
+
+*.aux
+*.bbl
+*.blg
+*.glo
+*.glg
+*.gls
+*.ist
+*.lof
+*.log
+*.lot
+*.out
+*.toc
